# QmlPractice

./: README.md
000_Rectangle_Game/Rectangle_Game/: CMakeLists.txt  main.cpp
000_Rectangle_Game/build-Rectangle_Game-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  apprectangle_game_qmltyperegistrations.cpp  build.ninja  cmake_install.cmake  qtcsettings.cmake
000_Rectangle_Game/build-Rectangle_Game-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
000_Rectangle_Game/build-Rectangle_Game-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.rcc/: appRectangle_Game_raw_qml_0.qrc  (+3 more)
001_Basic_data_types/Basic_data_types/: CMakeLists.txt  Main.qml  main.cpp
001_Basic_data_types/build-Basic_data_types-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  appbasic_data_types_qmltyperegistrations.cpp  build.ninja  cmake_install.cmake  qtcsettings.cmake
002_Property_binding/: Main.qml
002_Property_binding/Property_binding/: CMakeLists.txt  main.cpp
002_Property_binding/build-Property_binding-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  appproperty_binding_qmltyperegistrations.cpp  build.ninja  cmake_install.cmake
003_Properties_and_handlers/: Main.qml
003_Properties_and_handlers/Properties_and_handlers/: CMakeLists.txt  Main.qml  main.cpp
003_Properties_and_handlers/build-Properties_and_handlers-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  appproperties_and_handlers_qmltyperegistrations.cpp  build.ninja  cmake_install.cmake  qtcsettings.cmake
(+136 files in other folders)
